builds with java 17